Hero section scroll fix on mobile v5

--- a/app/globals.css
+++ b/app/globals.css
@@ -22,3 +22,7 @@
 html {
     scroll-behavior: smooth;
 }
+
+canvas {
+  touch-action: pan-y !important;
+}
